--- a/14/manifest.json
+++ b/14/manifest.json
@@ -8,6 +8,7 @@
     "48": "icon.png",
     "128": "icon.png"
   },
+  "permissions": ["notifications"],
   "browser_action": {
     "default_icon": "icon.png",
     "default_title": "popup",
